k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  namespace: java-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/app-root: /login
    cert-manager.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx
  rules:
  - host: dev.app.k8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-k8s
            port:
              name: http
  tls:
  - hosts:
    - dev.app.k8s.com 
    secretName: java-app-tls
